<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ros.stjohnshhunt.viewmodels.PropertySearchViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_large"
        android:padding="@dimen/margin_normal">

        <EditText
            android:id="@+id/search_name"
            android:layout_width="@dimen/search_input_w"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/search_name_hint"/>

        <EditText
            android:id="@+id/search_bed_count"
            android:layout_width="@dimen/search_input_w"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_name"
            android:hint="@string/search_bedcount_hint"/>

        <EditText
            android:id="@+id/search_bath_count"
            android:layout_width="@dimen/search_input_w"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bed_count"
            android:hint="@string/search_bathcount_hint"/>

        <EditText
            android:id="@+id/search_price_min"
            android:layout_width="@dimen/search_input_w"
            android:layout_height="wrap_content"
            android:hint="@string/search_price_min_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bath_count"/>

        <EditText
            android:id="@+id/search_price_max"
            android:layout_width="@dimen/search_input_w"
            android:layout_height="wrap_content"
            android:hint="@string/search_price_max_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_price_min"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_cta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:backgroundTint="@color/design_default_color_primary"
            android:text="@string/search_creation_cta"
            android:layout_margin="@dimen/margin_normal"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>